ALmost almost there

--- a/PrivateMeanEstimation/code/The Binary Sum problem.ipynb
+++ b/PrivateMeanEstimation/code/The Binary Sum problem.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "colonial-payroll",
+   "id": "ordered-possession",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "norman-subcommittee",
+   "id": "jewish-dealer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "familiar-korea",
+   "id": "trained-gothic",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "traditional-cambodia",
+   "id": "median-missouri",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "spectacular-thanksgiving",
+   "id": "flying-month",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hindu-guarantee",
+   "id": "collectible-alpha",
    "metadata": {},
    "source": [
     "# Simple Binary sum problem"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "norman-sweden",
+   "id": "current-principal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "massive-explorer",
+   "id": "under-nitrogen",
    "metadata": {},
    "source": [
     "# Laplace Mechanism"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "mighty-milton",
+   "id": "flush-interface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aerial-worse",
+   "id": "female-design",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-protection",
+   "id": "selected-fancy",
    "metadata": {},
    "source": [
     "# Randomised Response"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "political-terror",
+   "id": "aggressive-somalia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "worthy-system",
+   "id": "burning-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "intense-chocolate",
+   "id": "indirect-testing",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "subject-apache",
+   "id": "greatest-thread",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-wilderness",
+   "id": "tribal-bread",
    "metadata": {},
    "source": [
     "# Shuffle Privacy Cheu"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "signal-consumption",
+   "id": "removable-sandwich",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-pleasure",
+   "id": "technological-section",
    "metadata": {},
    "source": [
     "## Not all values of epsilon delta work\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "purple-secret",
+   "id": "contained-psychology",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "tested-technology",
+   "id": "isolated-receiver",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "mounted-primary",
+   "id": "loving-holder",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "illegal-statement",
+   "id": "pretty-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "large-effect",
+   "id": "clinical-digit",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "right-unemployment",
+   "id": "quiet-combine",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "phantom-finder",
+   "id": "specified-contrast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "athletic-solomon",
+   "id": "removed-marriage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "pressing-moral",
+   "id": "swedish-reggae",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "surface-screw",
+   "id": "congressional-catch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,20 +759,22 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "informed-terry",
+   "id": "patient-obligation",
    "metadata": {},
    "outputs": [],
    "source": [
     "def minimum_value_of_n(epsilon, delta):\n",
     "    \n",
     "    return (100/epsilon**2)*np.log(2/delta)\n",
-    "\n"
+    "\n",
+    "def value_for_m(epsilon, delta):\n",
+    "    return (100/epsilon**2)*np.log(2/delta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "controlled-shower",
+   "id": "voluntary-devon",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "combined-income",
+   "id": "supported-peace",
    "metadata": {},
    "outputs": [
     {
@@ -844,12 +846,27 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "epsilons = np.linspace(0.01, 0.3, 10)\n",
+    "deltas = np.linspace(0.01, 0.3, 10)\n",
+    "chart = np.zeros((len(epsilons), len(deltas)))\n",
+    "for i, epsilon in enumerate(epsilons):\n",
+    "    for j, delta in enumerate(deltas):\n",
+    "        chart[i,j] = np.log10(minimum_value_of_n(epsilon, delta))\n",
+    "        \n",
+    "i_eps = [\"{:.2f}\".format(i) for i in epsilons]\n",
+    "i_deltas = [\"{:.2f}\".format(i) for i in deltas]\n",
+    "df = pd.DataFrame(chart, index=i_eps, columns=i_deltas)\n",
+    "ax = sns.heatmap(df, annot=False)\n",
+    "ax.set_title('Values of log10(n) for eps, delta values to guarantee privacy')\n",
+    "ax.set_ylabel('Epsilon')\n",
+    "ax.set_xlabel('Delta')        "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "reserved-arrival",
+   "id": "breeding-martial",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "lucky-envelope",
+   "id": "competent-deployment",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-evans",
+   "id": "retired-velvet",
    "metadata": {},
    "outputs": [],
    "source": []
