Private voting summary started

--- a/MeetingNotes/2022_02_03.md
+++ b/MeetingNotes/2022_02_03.md
@@ -13,10 +13,12 @@
 ## Actual Meeting
 
 * Info theory proof for Privacy.
-* DPF prio proof systems. -- don't use phones to send sparse vectors. 
+Circuits have not been used that much for DP: 
+[Graham sent this one about probablistic programming](https://privacytools.seas.harvard.edu/files/privacytools/files/1911.03272.pdf)
+* DPF prio proof systems. -- don't use phones to send sparse vectors (poplar)
 * Robustness to poisoning attacks -- Albert Cheu.
 * 2 servers secret share -- what is the secure comparison protocol (You cannot see)
-* Information theory connection to DP. 
+
 
 
 <div>
