Updted some links

--- a/MeetingNotes/2022_04_27.md
+++ b/MeetingNotes/2022_04_27.md
@@ -23,6 +23,7 @@ Forgot to link this talk: https://www.youtube.com/watch?v=UARTYiDQwYc
 
 Although promising, I put it on the back burner as I found verifiable secret sharing from the BIU talks. Especially interesting was the homomorphic nature of the diffie helman signature. This led to me modifying the sketching and final protocol so that the adversary would be caught out. Note: this is verifiable and secure, so better than covert.
 
+**TODO**: Compile all papers that have been exachanged over email and capture context.
 
 ## Outstandting Tasks
 
@@ -33,3 +34,10 @@ These should be on the Github issue tracker.
 [] It remains a TODO on how we should implement the Secure comparison protocol in the first place.
 [] Actually implementing any of this in code remains todo. RustLang and GoLang are the languages of choice.
 
+## Things to chat about
+
+[] Happy with why existing protocols do not work? The coins have to be public. And if the coins are public, the transformation has to be lossy. Does this come across properly?
+[] If we ignore the secure comparison part of the protocol -- are you convinced the rest of it works?
+[] Do we need more formal simulator based proofs? Bellare's paper will be very useful in this regard to show what is equivalent to what. Also Canetti's paper.
+[] Do we need to upgrade to bi-variate polynomials to get info-theoretic security over computational security.
+[] What do you think we need to do on top of what we are doing to make it a strong paper, people will care about. Why has no one else really looked at DP under active security.
