--- a/MeetingNotes/2022_04_27.md
+++ b/MeetingNotes/2022_04_27.md
@@ -40,4 +40,5 @@ These should be on the Github issue tracker.
 [] If we ignore the secure comparison part of the protocol -- are you convinced the rest of it works?
 [] Do we need more formal simulator based proofs? Bellare's paper will be very useful in this regard to show what is equivalent to what. Also Canetti's paper.
 [] Do we need to upgrade to bi-variate polynomials to get info-theoretic security over computational security.
-[] What do you think we need to do on top of what we are doing to make it a strong paper, people will care about. Why has no one else really looked at DP under active security.
+[] What do you think we need to do on top of what we are doing to make it a strong paper, people will care about. Why has no one else really looked at DP under active security. You mentioned including some other problems instead of $M$-bin histogram counting.
+[]
