--- a/MeetingNotes/2022_04_27.md
+++ b/MeetingNotes/2022_04_27.md
@@ -32,4 +32,15 @@ These should be on the Github issue tracker.
 [] Secure Comparison protocol in semi honest model violates differential privacy, therefore input privacy. But not in the semi honest/covert model. Only the active model. How to fix that remains open.
 [] It remains a TODO on how we should implement the Secure comparison protocol in the first place.
 [] Actually implementing any of this in code remains todo. RustLang and GoLang are the languages of choice.
+[] 
 
+## notes
+
+* More mechanisms than sample and threshold privacy.
+* Binomial mechanism -- similar trick to the Morra game.
+* Sample and Threshold :  no one should know if they've been sampled.
+* Other functions: A slightly more complex function -- rank!
+* Dependence on $M$ -- can we get rid of it.
+* Corrupt rather than evil
+* Poisoning attacks on local differential privacy (manipulation attacks in local privacy)
+* Distributed noise generation and shuffle model are almost identical.
